tests/errors/syn_call7.java
public class syn_call7{
public static void main(String[] args){
 3 ) ;
}
}